Add todas las peliculas. Meti un efecto piola para el hover de las cards. Agregue el alt en las imagenes. Faltan nomas las fotos para los carruseles de fotos

--- a/nuestras-peliculas/demons.html
+++ b/nuestras-peliculas/demons.html
@@ -38,23 +38,23 @@
 
         <section>
             <div class="banner">
-                <h2>TERRIFIER 2</h2>
+                <h2>DEMONS</h2>
             </div>
         </section>
 
         <section>
             <div class="flex-container-peliculas">
                 <div class="poster">
-                    <img src="../img/posters/terrifier.jpg" alt="terrifier2-poster">
+                    <img src="../img/posters/demons.jpg" alt="demons-poster">
                 </div>
                 
                 <div class="info-compra">
                     <div class="trailer">
-                        <iframe src="https://www.youtube.com/embed/UOrNESb8T4I?si=bQpo2bmVMQ9TYxBR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/-4Ru1UChaUU?si=Z2__35iDHTx-mPWi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class="precio-puntuacion">
                         <div class="precio">
-                            <p>Precio: $15.154</p>
+                            <p>Precio: $7.500</p>
                         </div>
                         <div class="puntuacion">
                             <p>Puntuacion:</p>
@@ -66,8 +66,8 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star bn"></i>
+                                <i class="fas fa-star bn"></i>
                                 <i class="fas fa-star bn"></i>
                             </div>
                         </div>
@@ -84,7 +84,6 @@
             <div class="sinopsis-reparto">
                 <div class="reparto">
                     <h3>REPARTO</h3>
-
                     <table>
                         <thead>
                             <tr>
@@ -94,36 +93,36 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>David Howard Thornton</td>
-                                <td>Art the Clown</td>
+                                <td>Urbano Barberini</td>
+                                <td>George</td>
                             </tr>
                             <tr>
-                                <td>Lauren LaVera</td>
-                                <td>Sienna</td>
+                                <td>Natasha Hovey</td>
+                                <td>Cheryl</td>
                             </tr>
                             <tr>
-                                <td>Elliott Fullam</td>
-                                <td>Jonathan</td>
+                                <td>Karl Zinny</td>
+                                <td>Ken</td>
                             </tr>
                             <tr>
-                                <td>Sarah Voigt</td>
-                                <td>Barbara</td>
+                                <td>Fabiola Toledo</td>
+                                <td>Kathy</td>
                             </tr>
                             <tr>
-                                <td>Kailey Hyman</td>
-                                <td>Brooke</td>
+                                <td>Fiore Argento</td>
+                                <td>Hannah</td>
                             </tr>
                             <tr>
-                                <td>Casey Hartnett</td>
-                                <td>Allie</td>
+                                <td>Paola Cozzo</td>
+                                <td>Ruth</td>
                             </tr>
                             <tr>
-                                <td>Charlene Amoia</td>
-                                <td>Monica Brown</td>
+                                <td>Nicoletta Elmi</td>
+                                <td>Ingrid</td>
                             </tr>
                             <tr>
-                                <td>Felissa Rose</td>
-                                <td>Ms. Principe</td>
+                                <td>Stelio Candelli</td>
+                                <td>Frank</td>
                             </tr>
                         </tbody>
                     </table>
@@ -132,8 +131,8 @@
                     <div class="sinopsis">
                         <h3>SINOPSIS</h3>
                         <p>
-                            Después de ser resucitado por una entidad siniestra, Art the Clown regresa al condado de Miles, donde tiene como objetivo una adolescente llamada Sienna y su hermano menor Jonathan durante la noche de Halloween. Sienna está lidiando con la reciente muerte de su padre y los traumas familiares, mientras se prepara para una fiesta de Halloween con un traje elaborado por ella misma. Sin embargo, la noche toma un giro aterrador cuando Art comienza una ola de asesinatos brutal y sádica. Sienna y Jonathan deben enfrentarse a sus peores pesadillas y descubrir los oscuros secretos que rodean a Art the Clown, mientras luchan por sobrevivir a su despiadada cacería.
-                        </p>                    
+                        En una noche común en un teatro de películas de terror, un grupo de personas se reúne para ver una película llamada "Demons". Pronto, la película se convierte en una realidad cuando los espectadores son infectados por un extraño virus que los transforma en demonios sedientos de sangre. A medida que la situación se vuelve cada vez más caótica, los sobrevivientes luchan por encontrar una salida, enfrentando no solo a los demonios dentro del teatro, sino también sus propios miedos y conflictos internos.
+                        </p>                   
                     </div>
                     <div class="puntuacionUsuario">
                         <h3>Deja tu puntuacion!</h3>
