--- a/nuestras-peliculas/inferno.html
+++ b/nuestras-peliculas/inferno.html
@@ -38,23 +38,23 @@
 
         <section>
             <div class="banner">
-                <h2>TERRIFIER 2</h2>
+                <h2>INFERNO</h2>
             </div>
         </section>
 
         <section>
             <div class="flex-container-peliculas">
                 <div class="poster">
-                    <img src="../img/posters/terrifier.jpg" alt="terrifier2-poster">
+                    <img src="../img/posters/inferno.jpg" alt="inferno-poster">
                 </div>
                 
                 <div class="info-compra">
                     <div class="trailer">
-                        <iframe src="https://www.youtube.com/embed/UOrNESb8T4I?si=bQpo2bmVMQ9TYxBR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/qbKgG_TC_To?si=jMhkxNIF2tzrq89D" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class="precio-puntuacion">
                         <div class="precio">
-                            <p>Precio: $15.154</p>
+                            <p>Precio: $6.555</p>
                         </div>
                         <div class="puntuacion">
                             <p>Puntuacion:</p>
@@ -66,8 +66,8 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star bn"></i>
+                                <i class="fas fa-star bn"></i>
                                 <i class="fas fa-star bn"></i>
                             </div>
                         </div>
@@ -84,7 +84,6 @@
             <div class="sinopsis-reparto">
                 <div class="reparto">
                     <h3>REPARTO</h3>
-
                     <table>
                         <thead>
                             <tr>
@@ -94,36 +93,36 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>David Howard Thornton</td>
-                                <td>Art the Clown</td>
+                                <td>Irene Miracle</td>
+                                <td>Rose Elliot</td>
                             </tr>
                             <tr>
-                                <td>Lauren LaVera</td>
-                                <td>Sienna</td>
+                                <td>Leigh McCloskey</td>
+                                <td>Mark Elliot</td>
                             </tr>
                             <tr>
-                                <td>Elliott Fullam</td>
-                                <td>Jonathan</td>
+                                <td>Sacha Pitoëff</td>
+                                <td>Kazanian</td>
                             </tr>
                             <tr>
-                                <td>Sarah Voigt</td>
-                                <td>Barbara</td>
+                                <td>Alida Valli</td>
+                                <td>Carol</td>
                             </tr>
                             <tr>
-                                <td>Kailey Hyman</td>
-                                <td>Brooke</td>
+                                <td>Veronica Lazar</td>
+                                <td>Elise Stallone</td>
                             </tr>
                             <tr>
-                                <td>Casey Hartnett</td>
-                                <td>Allie</td>
+                                <td>Gabriele Lavia</td>
+                                <td>Professor Arnold</td>
                             </tr>
                             <tr>
-                                <td>Charlene Amoia</td>
-                                <td>Monica Brown</td>
+                                <td>Feodor Chaliapin Jr.</td>
+                                <td>Old man</td>
                             </tr>
                             <tr>
-                                <td>Felissa Rose</td>
-                                <td>Ms. Principe</td>
+                                <td>Leopoldo Mastelloni</td>
+                                <td>Young man</td>
                             </tr>
                         </tbody>
                     </table>
@@ -132,8 +131,8 @@
                     <div class="sinopsis">
                         <h3>SINOPSIS</h3>
                         <p>
-                            Después de ser resucitado por una entidad siniestra, Art the Clown regresa al condado de Miles, donde tiene como objetivo una adolescente llamada Sienna y su hermano menor Jonathan durante la noche de Halloween. Sienna está lidiando con la reciente muerte de su padre y los traumas familiares, mientras se prepara para una fiesta de Halloween con un traje elaborado por ella misma. Sin embargo, la noche toma un giro aterrador cuando Art comienza una ola de asesinatos brutal y sádica. Sienna y Jonathan deben enfrentarse a sus peores pesadillas y descubrir los oscuros secretos que rodean a Art the Clown, mientras luchan por sobrevivir a su despiadada cacería.
-                        </p>                    
+                            En Nueva York, una joven poeta llamada Rose Elliot descubre un libro antiguo que habla sobre los Tres Madres, tres brujas que gobiernan el dolor, la tristeza y la oscuridad. Convencida de que vive en un edificio habitado por una de las Tres Madres, Rose envía una carta desesperada a su hermano Mark, quien vive en Roma. Mientras investiga la historia de las Tres Madres, Mark descubre una red de secretos y muertes misteriosas que parecen estar conectadas con el edificio de su hermana. Pronto se ve envuelto en un mundo de horror y magia negra, donde las líneas entre la realidad y la fantasía se desdibujan peligrosamente.
+                        </p>                 
                     </div>
                     <div class="puntuacionUsuario">
                         <h3>Deja tu puntuacion!</h3>
