--- a/index.html
+++ b/index.html
@@ -39,22 +39,23 @@
     <section>
       <div class="container-principal-home">
         <div class="container-mayor-izquierda">
-          <img src="../img/cave.jpg" alt="foto">
+          <img src="../img/cave.jpg" alt="cueva cinemafusion">
         </div>
         <div class="container-menor-derecha">
           <h2>¡Bienvenidos a CinemaFusion Films!</h2>
           <p>
-              En CinemaFusion Films nos especializamos en la producción, distribución y venta de películas
-              del género de horror que te helarán la sangre y te robarán el sueño.
+            En CinemaFusion Films nos especializamos en la producción, distribución y venta de películas
+            del género de horror que te helarán la sangre y te robarán el sueño.
           </p>
           <p>
-              Nuestro sitio web es tu portal al oscuro mundo del cine de horror, donde podrás explorar
-              nuestras inquietantes producciones, adquirir películas que te harán temblar, conocer a nuestro
-              macabro equipo, descubrir las más recientes novedades y mantenerte en contacto con nosotros a través de nuestras
-              siniestras redes sociales.
+            Nuestro sitio web es tu portal al oscuro mundo del cine de horror, donde podrás explorar
+            nuestras inquietantes producciones, adquirir películas que te harán temblar, conocer a nuestro
+            macabro equipo, descubrir las más recientes novedades y mantenerte en contacto con nosotros a través de
+            nuestras
+            siniestras redes sociales.
           </p>
           <p>
-              ¡Te invitamos a un viaje sin retorno a través de nuestro sitio web en CinemaFusion Films!
+            ¡Te invitamos a un viaje sin retorno a través de nuestro sitio web en CinemaFusion Films!
           </p>
 
           <a href="acerca-de.html" class="btn btn-danger conocenos-btn">CONOCENOS</a>
@@ -73,30 +74,36 @@
         <div class="col-md-4">
           <div class="card">
             <a href="acerca-de.html">
-              <img src="../img/grid-inicio/acerca-de.jpg" class="card-img-top" alt="...">
+              <img src="../img/grid-inicio/acerca-de.jpg" class="card-img-top" alt="acerca-de-mini">
             </a>
             <div class="card-body cuerpo-card">
-              <h5 class="card-title text-center">ACERCA DE</h5>
+              <a href="acerca-de.html">
+                <h5 class="card-title text-center">ACERCA DE</h5>
+              </a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card">
             <a href="nuestras-peliculas.html">
-              <img src="../img/grid-inicio/nuestras-peliculas.jpg" class="card-img-top" alt="...">
+              <img src="../img/grid-inicio/nuestras-peliculas.jpg" class="card-img-top" alt="nuestras-peliculas-mini">
             </a>
             <div class="card-body cuerpo-card">
-              <h5 class="card-title text-center">NUESTRAS PELICULAS</h5>
+              <a href="nuestras-peliculas.html">
+                <h5 class="card-title text-center">NUESTRAS PELICULAS</h5>
+              </a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card">
             <a href="novedades.html">
-              <img src="../img/grid-inicio/novedades.jpg" class="card-img-top" alt="...">
+              <img src="../img/grid-inicio/novedades.jpg" class="card-img-top" alt="novedades-mini">
             </a>
             <div class="card-body cuerpo-card">
-              <h5 class="card-title text-center">NOVEDADES</h5>
+              <a href="novedades.html">
+                <h5 class="card-title text-center">NOVEDADES</h5>
+              </a>
             </div>
           </div>
         </div>
@@ -105,30 +112,36 @@
         <div class="col-md-4">
           <div class="card">
             <a href="contacto.html">
-              <img src="../img/grid-inicio/contacto.jpg" class="card-img-top" alt="...">
+              <img src="../img/grid-inicio/contacto.jpg" class="card-img-top" alt="contacto-mini">
             </a>
             <div class="card-body cuerpo-card">
-              <h5 class="card-title text-center">CONTACTO</h5>
+              <a href="contacto.html">
+                <h5 class="card-title text-center">CONTACTO</h5>
+              </a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card">
-            <a href="login.html">
-              <img src="../img/grid-inicio/login.jpg" class="card-img-top" alt="...">
+            <a href="ingresar.html">
+              <img src="../img/grid-inicio/login.jpg" class="card-img-top" alt="ingresar-mini">
             </a>
             <div class="card-body cuerpo-card">
-              <h5 class="card-title text-center">INGRESAR</h5>
+              <a href="ingresar.html">
+                <h5 class="card-title text-center">INGRESAR</h5>
+              </a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card">
             <a href="carrito.html">
-              <img src="../img/grid-inicio/carrito.jpg" class="card-img-top" alt="...">
+              <img src="../img/grid-inicio/carrito.jpg" class="card-img-top" alt="carrrito-mini">
             </a>
             <div class="card-body cuerpo-card">
-              <h5 class="card-title text-center">CARRITO</h5>
+              <a href="carrito.html">
+                <h5 class="card-title text-center">CARRITO</h5>
+              </a>
             </div>
           </div>
         </div>
