--- a/nuestras-peliculas.html
+++ b/nuestras-peliculas.html
@@ -47,26 +47,36 @@
         <div class="col-md-4">
           <div class="card">
             <a href="nuestras-peliculas/terrifier-2.html">
-              <img src="../img/grid-peliculas/terrifier.jpg" class="card-img-top" alt="...">
+              <img src="../img/grid-peliculas/terrifier.jpg" class="card-img-top" alt="terrifier-2-mini">
             </a>
             <div class="card-body cuerpo-card">
-              <h5 class="card-title text-center">TERRIFIER 2</h5>
+              <a href="nuestras-peliculas/terrifier-2.html">
+                <h5 class="card-title text-center">TERRIFIER 2</h5>
+              </a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img src="../img/grid-peliculas/pearl.jpg" class="card-img-top" alt="...">
+            <a href="nuestras-peliculas/pearl.html">
+              <img src="../img/grid-peliculas/pearl.jpg" class="card-img-top" alt="pearl-mini">
+            </a>
             <div class="card-body cuerpo-card">
-              <h5 class="card-title text-center">PEARL</h5>
+              <a href="nuestras-peliculas/pearl.html">
+                <h5 class="card-title text-center">PEARL</h5>
+              </a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img src="../img/grid-peliculas/cuando-acecha.jpg" class="card-img-top" alt="...">
+            <a href="nuestras-peliculas/cuando-acecha-la-maldad.html">
+              <img src="../img/grid-peliculas/cuando-acecha.jpg" class="card-img-top" alt="cuando-acecha-mini">
+            </a>
             <div class="card-body cuerpo-card">
-              <h5 class="card-title text-center">CUANDO ACECHA LA MALDAD</h5>
+              <a href="nuestras-peliculas/cuando-acecha-la-maldad.html">
+                <h5 class="card-title text-center">CUANDO ACECHA LA MALDAD</h5>
+              </a>
             </div>
           </div>
         </div>
@@ -74,25 +84,37 @@
       <div class="row gy-3 mb-4">
         <div class="col-md-4">
           <div class="card">
-            <img src="../img/grid-peliculas/hereditary.jpg" class="card-img-top" alt="...">
+            <a href="nuestras-peliculas/hereditary.html">
+              <img src="../img/grid-peliculas/hereditary.jpg" class="card-img-top" alt="hereditary-mini">
+            </a>
             <div class="card-body cuerpo-card">
-              <h5 class="card-title text-center">HEREDITARY</h5>
+              <a href="nuestras-peliculas/hereditary.html">
+                <h5 class="card-title text-center">HEREDITARY</h5>
+              </a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img src="../img/grid-peliculas/midsommar.jpg" class="card-img-top" alt="...">
+            <a href="nuestras-peliculas/midsommar.html">
+              <img src="../img/grid-peliculas/midsommar.jpg" class="card-img-top" alt="midsommar-mini">
+            </a>
             <div class="card-body cuerpo-card">
-              <h5 class="card-title text-center">MIDSOMMAR</h5>
+              <a href="nuestras-peliculas/midsommar.html">
+                <h5 class="card-title text-center">MIDSOMMAR</h5>
+              </a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img src="../img/grid-peliculas/smile.jpg" class="card-img-top" alt="...">
+            <a href="nuestras-peliculas/smile.html">
+              <img src="../img/grid-peliculas/smile.jpg" class="card-img-top" alt="smile-mini">
+            </a>
             <div class="card-body cuerpo-card">
-              <h5 class="card-title text-center">SMILE</h5>
+              <a href="nuestras-peliculas/smile.html">
+                <h5 class="card-title text-center">SMILE</h5>
+              </a>
             </div>
           </div>
         </div>
@@ -110,25 +132,37 @@
     <div class="row gy-3 mt-3 mb-3">
       <div class="col-md-4">
         <div class="card">
-          <img src="../img/grid-peliculas/suspiria.jpg" class="card-img-top" alt="...">
+          <a href="nuestras-peliculas/suspiria.html">
+            <img src="../img/grid-peliculas/suspiria.jpg" class="card-img-top" alt="suspiria-mini">
+          </a>
           <div class="card-body cuerpo-card">
-            <h5 class="card-title text-center">SUSPIRIA</h5>
+            <a href="nuestras-peliculas/suspiria.html">
+              <h5 class="card-title text-center">SUSPIRIA</h5>
+            </a>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img src="../img/grid-peliculas/dracula.jpg" class="card-img-top" alt="...">
+          <a href="nuestras-peliculas/dracula.html">
+            <img src="../img/grid-peliculas/dracula.jpg" class="card-img-top" alt="dracula-mini">
+          </a>
           <div class="card-body cuerpo-card">
-            <h5 class="card-title text-center">DRACULA</h5>
+            <a href="nuestras-peliculas/dracula.html">
+              <h5 class="card-title text-center">DRACULA</h5>
+            </a>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img src="../img/grid-peliculas/exorcist.jpg" class="card-img-top" alt="...">
+          <a href="nuestras-peliculas/the-exorcist.html">
+            <img src="../img/grid-peliculas/exorcist.jpg" class="card-img-top" alt="exorcist-mini">
+          </a>
           <div class="card-body cuerpo-card">
-            <h5 class="card-title text-center">THE EXORCIST</h5>
+            <a href="nuestras-peliculas/the-exorcist.html">
+              <h5 class="card-title text-center">THE EXORCIST</h5>
+            </a>
           </div>
         </div>
       </div>
@@ -136,25 +170,37 @@
     <div class="row gy-3 mb-4">
       <div class="col-md-4">
         <div class="card">
-          <img src="../img/grid-peliculas/inferno.jpg" class="card-img-top" alt="...">
+          <a href="nuestras-peliculas/inferno.html">
+            <img src="../img/grid-peliculas/inferno.jpg" class="card-img-top" alt="inferno-mini">
+          </a>
           <div class="card-body cuerpo-card">
-            <h5 class="card-title text-center">INFERNO</h5>
+            <a href="nuestras-peliculas/inferno.html">
+              <h5 class="card-title text-center">INFERNO</h5>
+            </a>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img src="../img/grid-peliculas/rosemary.jpg" class="card-img-top" alt="...">
+          <a href="nuestras-peliculas/rosemary's-baby.html">
+            <img src="../img/grid-peliculas/rosemary.jpg" class="card-img-top" alt="rosemary-mini">
+          </a>
           <div class="card-body cuerpo-card">
-            <h5 class="card-title text-center">ROSEMARY'S BABY</h5>
+            <a href="nuestras-peliculas/rosemary's-baby.html">
+              <h5 class="card-title text-center">ROSEMARY'S BABY</h5>
+            </a>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img src="../img/grid-peliculas/demons.jpg" class="card-img-top" alt="...">
+          <a href="nuestras-peliculas/demons.html">
+            <img src="../img/grid-peliculas/demons.jpg" class="card-img-top" alt="demons-mini">
+          </a>
           <div class="card-body cuerpo-card">
-            <h5 class="card-title text-center">DEMONS</h5>
+            <a href="nuestras-peliculas/demons.html">
+              <h5 class="card-title text-center">DEMONS</h5>
+            </a>
           </div>
         </div>
       </div>
