--- a/nuestras-peliculas/cuando-acecha-la-maldad.html
+++ b/nuestras-peliculas/cuando-acecha-la-maldad.html
@@ -38,23 +38,23 @@
 
         <section>
             <div class="banner">
-                <h2>TERRIFIER 2</h2>
+                <h2>CUANDO ACECHA LA MALDAD</h2>
             </div>
         </section>
 
         <section>
             <div class="flex-container-peliculas">
                 <div class="poster">
-                    <img src="../img/posters/terrifier.jpg" alt="terrifier2-poster">
+                    <img src="../img/posters/cuando-acecha.jpg" alt="cuando-acecha-poster">
                 </div>
                 
                 <div class="info-compra">
                     <div class="trailer">
-                        <iframe src="https://www.youtube.com/embed/UOrNESb8T4I?si=bQpo2bmVMQ9TYxBR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/3EBy-WUbdBo?si=jziqFNgJQS6uFjJw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class="precio-puntuacion">
                         <div class="precio">
-                            <p>Precio: $15.154</p>
+                            <p>Precio: $16.520</p>
                         </div>
                         <div class="puntuacion">
                             <p>Puntuacion:</p>
@@ -67,7 +67,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star bn"></i>
                                 <i class="fas fa-star bn"></i>
                             </div>
                         </div>
@@ -84,7 +84,6 @@
             <div class="sinopsis-reparto">
                 <div class="reparto">
                     <h3>REPARTO</h3>
-
                     <table>
                         <thead>
                             <tr>
@@ -94,36 +93,36 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>David Howard Thornton</td>
-                                <td>Art the Clown</td>
+                                <td>Demian Salomon</td>
+                                <td>Pedro</td>
                             </tr>
                             <tr>
-                                <td>Lauren LaVera</td>
-                                <td>Sienna</td>
+                                <td>Julieta Vallina</td>
+                                <td>Julia</td>
                             </tr>
                             <tr>
-                                <td>Elliott Fullam</td>
-                                <td>Jonathan</td>
+                                <td>Ezequiel Rodríguez</td>
+                                <td>Mario</td>
                             </tr>
                             <tr>
-                                <td>Sarah Voigt</td>
-                                <td>Barbara</td>
+                                <td>Paula Brasca</td>
+                                <td>Ana</td>
                             </tr>
                             <tr>
-                                <td>Kailey Hyman</td>
-                                <td>Brooke</td>
+                                <td>Agustín Rittano</td>
+                                <td>Luciano</td>
                             </tr>
                             <tr>
-                                <td>Casey Hartnett</td>
-                                <td>Allie</td>
+                                <td>Matías Desiderio</td>
+                                <td>Héctor</td>
                             </tr>
                             <tr>
-                                <td>Charlene Amoia</td>
-                                <td>Monica Brown</td>
+                                <td>Valeria Blanc</td>
+                                <td>Sandra</td>
                             </tr>
                             <tr>
-                                <td>Felissa Rose</td>
-                                <td>Ms. Principe</td>
+                                <td>Guillermo Pfenning</td>
+                                <td>Rodrigo</td>
                             </tr>
                         </tbody>
                     </table>
@@ -132,8 +131,8 @@
                     <div class="sinopsis">
                         <h3>SINOPSIS</h3>
                         <p>
-                            Después de ser resucitado por una entidad siniestra, Art the Clown regresa al condado de Miles, donde tiene como objetivo una adolescente llamada Sienna y su hermano menor Jonathan durante la noche de Halloween. Sienna está lidiando con la reciente muerte de su padre y los traumas familiares, mientras se prepara para una fiesta de Halloween con un traje elaborado por ella misma. Sin embargo, la noche toma un giro aterrador cuando Art comienza una ola de asesinatos brutal y sádica. Sienna y Jonathan deben enfrentarse a sus peores pesadillas y descubrir los oscuros secretos que rodean a Art the Clown, mientras luchan por sobrevivir a su despiadada cacería.
-                        </p>                    
+                            En un remoto pueblo argentino, una familia se enfrenta a fuerzas sobrenaturales malignas cuando una entidad demoníaca comienza a sembrar el terror. Pedro, un hombre común, descubre que su hijo ha sido elegido como el próximo recipiente de esta entidad siniestra. Desesperado por salvar a su hijo, Pedro, junto con su esposa Julia y su hermano Mario, se embarcan en una lucha contra el tiempo para detener a la entidad antes de que consuma a su hijo por completo. Mientras tanto, el pueblo entero se ve sumido en el caos y el miedo, enfrentando eventos aterradores y fenómenos inexplicables. Con la ayuda de un grupo de amigos y vecinos, la familia debe enfrentar sus peores pesadillas y descubrir los oscuros secretos que rodean a la entidad demoníaca, mientras luchan por sobrevivir a su despiadada presencia.
+                        </p>                 
                     </div>
                     <div class="puntuacionUsuario">
                         <h3>Deja tu puntuacion!</h3>
