--- a/nuestras-peliculas/rosemary's-baby.html
+++ b/nuestras-peliculas/rosemary's-baby.html
@@ -38,23 +38,23 @@
 
         <section>
             <div class="banner">
-                <h2>TERRIFIER 2</h2>
+                <h2>ROSEMARY'S BABY</h2>
             </div>
         </section>
 
         <section>
             <div class="flex-container-peliculas">
                 <div class="poster">
-                    <img src="../img/posters/terrifier.jpg" alt="terrifier2-poster">
+                    <img src="../img/posters/rosemary.webp" alt="rosemary-poster">
                 </div>
                 
                 <div class="info-compra">
                     <div class="trailer">
-                        <iframe src="https://www.youtube.com/embed/UOrNESb8T4I?si=bQpo2bmVMQ9TYxBR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/BjpA6IH_Skc?si=qdyAQXdXh1cSyFC0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class="precio-puntuacion">
                         <div class="precio">
-                            <p>Precio: $15.154</p>
+                            <p>Precio: $8.200</p>
                         </div>
                         <div class="puntuacion">
                             <p>Puntuacion:</p>
@@ -84,7 +84,6 @@
             <div class="sinopsis-reparto">
                 <div class="reparto">
                     <h3>REPARTO</h3>
-
                     <table>
                         <thead>
                             <tr>
@@ -94,36 +93,36 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>David Howard Thornton</td>
-                                <td>Art the Clown</td>
+                                <td>Mia Farrow</td>
+                                <td>Rosemary Woodhouse</td>
                             </tr>
                             <tr>
-                                <td>Lauren LaVera</td>
-                                <td>Sienna</td>
+                                <td>John Cassavetes</td>
+                                <td>Guy Woodhouse</td>
                             </tr>
                             <tr>
-                                <td>Elliott Fullam</td>
-                                <td>Jonathan</td>
+                                <td>Ruth Gordon</td>
+                                <td>Minnie Castevet</td>
                             </tr>
                             <tr>
-                                <td>Sarah Voigt</td>
-                                <td>Barbara</td>
+                                <td>Sidney Blackmer</td>
+                                <td>Roman Castevet</td>
                             </tr>
                             <tr>
-                                <td>Kailey Hyman</td>
-                                <td>Brooke</td>
+                                <td>Maurice Evans</td>
+                                <td>Hutch</td>
                             </tr>
                             <tr>
-                                <td>Casey Hartnett</td>
-                                <td>Allie</td>
+                                <td>Ralph Bellamy</td>
+                                <td>Dr. Sapirstein</td>
                             </tr>
                             <tr>
-                                <td>Charlene Amoia</td>
-                                <td>Monica Brown</td>
+                                <td>Victoria Vetri</td>
+                                <td>Terry Gionoffrio</td>
                             </tr>
                             <tr>
-                                <td>Felissa Rose</td>
-                                <td>Ms. Principe</td>
+                                <td>Patsy Kelly</td>
+                                <td>Laura-Louise McBirney</td>
                             </tr>
                         </tbody>
                     </table>
@@ -132,8 +131,8 @@
                     <div class="sinopsis">
                         <h3>SINOPSIS</h3>
                         <p>
-                            Después de ser resucitado por una entidad siniestra, Art the Clown regresa al condado de Miles, donde tiene como objetivo una adolescente llamada Sienna y su hermano menor Jonathan durante la noche de Halloween. Sienna está lidiando con la reciente muerte de su padre y los traumas familiares, mientras se prepara para una fiesta de Halloween con un traje elaborado por ella misma. Sin embargo, la noche toma un giro aterrador cuando Art comienza una ola de asesinatos brutal y sádica. Sienna y Jonathan deben enfrentarse a sus peores pesadillas y descubrir los oscuros secretos que rodean a Art the Clown, mientras luchan por sobrevivir a su despiadada cacería.
-                        </p>                    
+                            Rosemary Woodhouse y su esposo, Guy, se mudan a un nuevo apartamento en Nueva York, donde hacen amistad con sus vecinos, los Castevet. Después de una serie de eventos extraños, Rosemary queda embarazada, pero su embarazo se vuelve cada vez más inquietante, y comienza a sospechar que los Castevet y otros vecinos tienen motivos ocultos con respecto a su bebé. A medida que su embarazo avanza, Rosemary se sumerge en una espiral de paranoia y miedo, sin saber en quién confiar ni qué hacer para proteger a su hijo no nacido.
+                        </p>                 
                     </div>
                     <div class="puntuacionUsuario">
                         <h3>Deja tu puntuacion!</h3>
