--- a/nuestras-peliculas/smile.html
+++ b/nuestras-peliculas/smile.html
@@ -38,23 +38,23 @@
 
         <section>
             <div class="banner">
-                <h2>TERRIFIER 2</h2>
+                <h2>SMILE</h2>
             </div>
         </section>
 
         <section>
             <div class="flex-container-peliculas">
                 <div class="poster">
-                    <img src="../img/posters/terrifier.jpg" alt="terrifier2-poster">
+                    <img src="../img/posters/smile.jpg" alt="smile-poster">
                 </div>
                 
                 <div class="info-compra">
                     <div class="trailer">
-                        <iframe src="https://www.youtube.com/embed/UOrNESb8T4I?si=bQpo2bmVMQ9TYxBR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/BcDK7lkzzsU?si=tG493xCfnHJ9b3pW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class="precio-puntuacion">
                         <div class="precio">
-                            <p>Precio: $15.154</p>
+                            <p>Precio: $13.300</p>
                         </div>
                         <div class="puntuacion">
                             <p>Puntuacion:</p>
@@ -66,8 +66,8 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star bn"></i>
+                                <i class="fas fa-star bn"></i>
                                 <i class="fas fa-star bn"></i>
                             </div>
                         </div>
@@ -84,7 +84,6 @@
             <div class="sinopsis-reparto">
                 <div class="reparto">
                     <h3>REPARTO</h3>
-
                     <table>
                         <thead>
                             <tr>
@@ -94,36 +93,36 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>David Howard Thornton</td>
-                                <td>Art the Clown</td>
+                                <td>Sosie Bacon</td>
+                                <td>Dr. Rose Cotter</td>
                             </tr>
                             <tr>
-                                <td>Lauren LaVera</td>
-                                <td>Sienna</td>
+                                <td>Jessie T. Usher</td>
+                                <td>Trevor</td>
                             </tr>
                             <tr>
-                                <td>Elliott Fullam</td>
-                                <td>Jonathan</td>
+                                <td>Kyle Gallner</td>
+                                <td>Joel</td>
                             </tr>
                             <tr>
-                                <td>Sarah Voigt</td>
-                                <td>Barbara</td>
+                                <td>Robin Weigert</td>
+                                <td>Dr. Madeline Northcott</td>
                             </tr>
                             <tr>
-                                <td>Kailey Hyman</td>
-                                <td>Brooke</td>
+                                <td>Caitlin Stasey</td>
+                                <td>Laura Weaver</td>
                             </tr>
                             <tr>
-                                <td>Casey Hartnett</td>
-                                <td>Allie</td>
+                                <td>Kal Penn</td>
+                                <td>Dr. Morgan Desai</td>
                             </tr>
                             <tr>
-                                <td>Charlene Amoia</td>
-                                <td>Monica Brown</td>
+                                <td>Rob Morgan</td>
+                                <td>Robert Talley</td>
                             </tr>
                             <tr>
-                                <td>Felissa Rose</td>
-                                <td>Ms. Principe</td>
+                                <td>Judy Reyes</td>
+                                <td>Victoria Muñoz</td>
                             </tr>
                         </tbody>
                     </table>
@@ -132,8 +131,8 @@
                     <div class="sinopsis">
                         <h3>SINOPSIS</h3>
                         <p>
-                            Después de ser resucitado por una entidad siniestra, Art the Clown regresa al condado de Miles, donde tiene como objetivo una adolescente llamada Sienna y su hermano menor Jonathan durante la noche de Halloween. Sienna está lidiando con la reciente muerte de su padre y los traumas familiares, mientras se prepara para una fiesta de Halloween con un traje elaborado por ella misma. Sin embargo, la noche toma un giro aterrador cuando Art comienza una ola de asesinatos brutal y sádica. Sienna y Jonathan deben enfrentarse a sus peores pesadillas y descubrir los oscuros secretos que rodean a Art the Clown, mientras luchan por sobrevivir a su despiadada cacería.
-                        </p>                    
+                            La Dra. Rose Cotter, una psiquiatra dedicada, se ve envuelta en un misterio aterrador cuando una de sus pacientes se suicida de manera violenta frente a ella tras afirmar que una entidad maligna la está persiguiendo. A raíz de este trágico evento, Rose comienza a experimentar visiones aterradoras y encuentros inexplicables, todos marcados por la siniestra sonrisa de sus víctimas. Mientras investiga desesperadamente para entender y detener la maldición que ahora la persigue, Rose descubre que esta entidad se alimenta del trauma y el miedo, pasando de una víctima a otra. Con el tiempo en su contra y la cordura desvaneciéndose, Rose debe enfrentarse a sus propios demonios y desentrañar el oscuro secreto detrás de la entidad sonriente, mientras lucha por sobrevivir y evitar que su vida termine en una sonrisa macabra.
+                        </p>                   
                     </div>
                     <div class="puntuacionUsuario">
                         <h3>Deja tu puntuacion!</h3>
