--- a/nuestras-peliculas/suspiria.html
+++ b/nuestras-peliculas/suspiria.html
@@ -38,23 +38,23 @@
 
         <section>
             <div class="banner">
-                <h2>TERRIFIER 2</h2>
+                <h2>SUSPIRIA</h2>
             </div>
         </section>
 
         <section>
             <div class="flex-container-peliculas">
                 <div class="poster">
-                    <img src="../img/posters/terrifier.jpg" alt="terrifier2-poster">
+                    <img src="../img/posters/suspiria.jpg" alt="suspiria-poster">
                 </div>
                 
                 <div class="info-compra">
                     <div class="trailer">
-                        <iframe src="https://www.youtube.com/embed/UOrNESb8T4I?si=bQpo2bmVMQ9TYxBR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/hPs2ExUL_bc?si=caL-YHwo1y2EfYIx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class="precio-puntuacion">
                         <div class="precio">
-                            <p>Precio: $15.154</p>
+                            <p>Precio: $8.500</p>
                         </div>
                         <div class="puntuacion">
                             <p>Puntuacion:</p>
@@ -68,7 +68,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fas fa-star bn"></i>
+                                <i class="fas fa-star"></i>
                             </div>
                         </div>
                     </div>
@@ -84,7 +84,6 @@
             <div class="sinopsis-reparto">
                 <div class="reparto">
                     <h3>REPARTO</h3>
-
                     <table>
                         <thead>
                             <tr>
@@ -94,36 +93,36 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>David Howard Thornton</td>
-                                <td>Art the Clown</td>
+                                <td>Jessica Harper</td>
+                                <td>Suzy Bannion</td>
                             </tr>
                             <tr>
-                                <td>Lauren LaVera</td>
-                                <td>Sienna</td>
+                                <td>Stefania Casini</td>
+                                <td>Sarah</td>
                             </tr>
                             <tr>
-                                <td>Elliott Fullam</td>
-                                <td>Jonathan</td>
+                                <td>Flavio Bucci</td>
+                                <td>Daniel</td>
                             </tr>
                             <tr>
-                                <td>Sarah Voigt</td>
-                                <td>Barbara</td>
+                                <td>Miguel Bosé</td>
+                                <td>Mark</td>
                             </tr>
                             <tr>
-                                <td>Kailey Hyman</td>
-                                <td>Brooke</td>
+                                <td>Alida Valli</td>
+                                <td>Miss Tanner</td>
                             </tr>
                             <tr>
-                                <td>Casey Hartnett</td>
-                                <td>Allie</td>
+                                <td>Joan Bennett</td>
+                                <td>Madame Blanc</td>
                             </tr>
                             <tr>
-                                <td>Charlene Amoia</td>
-                                <td>Monica Brown</td>
+                                <td>Barbara Magnolfi</td>
+                                <td>Olga</td>
                             </tr>
                             <tr>
-                                <td>Felissa Rose</td>
-                                <td>Ms. Principe</td>
+                                <td>Rudolf Schündler</td>
+                                <td>Profesor Milius</td>
                             </tr>
                         </tbody>
                     </table>
@@ -132,8 +131,8 @@
                     <div class="sinopsis">
                         <h3>SINOPSIS</h3>
                         <p>
-                            Después de ser resucitado por una entidad siniestra, Art the Clown regresa al condado de Miles, donde tiene como objetivo una adolescente llamada Sienna y su hermano menor Jonathan durante la noche de Halloween. Sienna está lidiando con la reciente muerte de su padre y los traumas familiares, mientras se prepara para una fiesta de Halloween con un traje elaborado por ella misma. Sin embargo, la noche toma un giro aterrador cuando Art comienza una ola de asesinatos brutal y sádica. Sienna y Jonathan deben enfrentarse a sus peores pesadillas y descubrir los oscuros secretos que rodean a Art the Clown, mientras luchan por sobrevivir a su despiadada cacería.
-                        </p>                    
+                            Suzy Bannion, una joven bailarina americana, llega a Friburgo para unirse a una prestigiosa academia de danza. Pronto descubre que la academia está dirigida por un grupo de brujas que practican la magia negra. Cuando una serie de violentos asesinatos comienzan a ocurrir en la academia, Suzy debe enfrentarse a la terrorífica verdad detrás de la aparentemente respetable institución. Con la ayuda de una amiga y un psiquiatra, Suzy se adentra en un mundo de horror y oscuridad donde las brujas buscan mantener su poder a cualquier costo. Enfrentando a enemigos sobrenaturales y luchando por su propia supervivencia, Suzy se ve atrapada en una pesadilla de la que puede que no logre escapar.
+                        </p>                  
                     </div>
                     <div class="puntuacionUsuario">
                         <h3>Deja tu puntuacion!</h3>
