Fix parrafo cringe del index

--- a/index.html
+++ b/index.html
@@ -61,20 +61,19 @@
           <img src="../img/cave.jpg" alt="cueva cinemafusion">
         </div>
         <div class="container-menor-derecha">
-          <h2>¡Bienvenidos a CinemaFusion Films!</h2>
+          <h2>Bienvenidos a CinemaFusion Films!</h2>
           <p>
-            En CinemaFusion Films nos especializamos en la producción, distribución y venta de películas
-            del género de horror que te helarán la sangre y te robarán el sueño.
+            Nuestra compañía se especializa en la producción, distribución y venta de películas
+            del género de horror que te dejarán sin aliento y te robarán el sueño.
           </p>
           <p>
-            Nuestro sitio web es tu portal al oscuro mundo del cine de horror, donde podrás explorar
-            nuestras inquietantes producciones, adquirir películas que te harán temblar, conocer a nuestro
-            macabro equipo, descubrir las más recientes novedades y mantenerte en contacto con nosotros a través de
-            nuestras
-            siniestras redes sociales.
+            Nuestro sitio web es tu portal al mundo del cine de horror, donde podrás explorar
+            nuestras producciones de la mas alta calidad, adquirir películas a precios impactantes, conocer a nuestro
+            equipo, descubrir todas las novedades y mantenerte en contacto con nosotros a través de
+            nuestras redes sociales.
           </p>
           <p>
-            ¡Te invitamos a un viaje sin retorno a través de nuestro sitio web en CinemaFusion Films!
+            Te invitamos a un viaje hacia lo oscuro explorando nuestro sitio web
           </p>
 
           <a href="acerca-de.html" class="btn btn-danger conocenos-btn">CONOCENOS</a>
