Actualización de contenido en la página "Acerca de" con información detallada

--- a/acerca-de.html
+++ b/acerca-de.html
@@ -30,16 +30,73 @@
       </ul>
     </nav>
   </header>
-
   <main>
     <a href="#top">
-      <i class="fas fa-angle-double-up"></i>
+        <i class="fas fa-angle-double-up"></i>
     </a>
 
-    <section>
-        <p>hola hola</p>
+    <section class="recent-article text-center my-4">
+      <div class="banner text-center p-3">
+        <h2>Acerca de CinemaFusion Films</h2>
+      </div>
+      
+        <div class="text-container mt-4">
+            <p>
+              En CinemaFusion Films nos especializamos en la producción, distribución y venta de películas del género de horror que te helarán la sangre y te robarán el sueño. Desde nuestra fundación, nos hemos comprometido a ofrecer una experiencia cinematográfica única que desafíe los límites de lo convencional.
+            </p>
+        </div>
     </section>
-  </main>
+
+    <section class="recent-article text-center my-4">
+        <h3>Nuestro Compromiso</h3>
+        <div class="text-container mt-4">
+            <p>Nos dedicamos a proporcionar experiencias cinematográficas inmersivas que cautiven a nuestros espectadores y los transporten a través de emocionantes historias llenas de suspense y horror. Cada película en nuestro catálogo está meticulosamente seleccionada para ofrecer momentos de terror visceral y reflexión profunda.</p>
+            
+        </div>
+    </section>
+
+    <section class="recent-article text-center my-4">
+        <h3>Explora Nuestro Oscuro Mundo</h3>
+        <div class="text-container mt-4">
+            <p>
+              Nuestro catálogo abarca desde clásicos icónicos hasta innovadoras obras contemporáneas que exploran lo más profundo de la psique humana. Cada película representa nuestro compromiso con la calidad cinematográfica y nuestra pasión por el arte del terror.
+            </p>
+        </div>
+    </section>
+
+    <section class="recent-article text-center my-4">
+      <h3>Equipo Apasionado</h3>
+      <div class="text-container mt-4">
+          <p>
+            Detrás de cada producción hay un equipo de talentosos cineastas y creativos que comparten una fascinación por el género de horror. Trabajamos incansablemente para crear experiencias que desafíen, entretengan y provoquen reflexión en nuestra audiencia global.                    
+          </p>
+      </div>
+  </section>
+
+  <section class="recent-article text-center my-4">
+    <h3>Conecta con Nosotros</h3>
+    <div class="text-container mt-4">
+        <p>
+          Únete a nuestra comunidad en nuestras redes sociales para descubrir las últimas novedades, interactuar con el equipo y explorar detrás de las escenas de nuestras producciones más recientes. En CinemaFusion Films, valoramos profundamente la conexión con nuestros seguidores y la pasión compartida por el terror.        
+        </p>
+    </div>
+</section>
+
+
+    <section class="recent-article text-center my-4">
+        <h2>Autores del Proyecto</h2>
+        <div class="text-container mt-4">
+            <ul style="list-style-type: none; padding-left: 0; text-align: center;">
+                <li>Mariano Aquino</li>
+                <li>Joaquín Abal</li>
+                <li>Nico Brites</li>                
+                <li>Matías Cantero</li>           
+                <li>Alexis Aranda</li>
+            </ul>
+        </div>
+    </section>
+</main>
+
 
   <footer>
     <div>
