--- a/articulos/evil-lurks.html
+++ b/articulos/evil-lurks.html
@@ -23,7 +23,7 @@
     <header>
       <nav class="navbar">
         <div class="navbar-izquierda">
-          <a href="index.html"
+          <a href="../index.html"
             ><img src="../img/logo-3.png" alt="Logo" class="logo"
           /></a>
         </div>
