Correccion de imagen en carrito

--- a/carrito.html
+++ b/carrito.html
@@ -63,7 +63,7 @@
           <h4 class="text-center"> Productos</h4>
           <hr>
           <div class="row">
-            <img src="img/grid-peliculas/terrifier.jpg" class="img-fluid col-md-4 mt-1" alt="Terrifier">
+            <img src="img/posters/terrifier.jpg" class="img-fluid col-md-4 mt-1" alt="Terrifier">
               <div class="card-body col-md-8">
                 <h5>Nombre: Terrifier</h5>
                 <h5>Precio: $20.00</h5>
@@ -73,7 +73,7 @@
                 </div>
               </div>
               <hr>
-            <img src="img/grid-peliculas/inferno.jpg" class="img-fluid col-md-4 mt-1" alt="Inferno">
+            <img src="img/posters/inferno.jpg" class="img-fluid col-md-4 mt-1" alt="Inferno">
               <div class="card-body col-md-8">
                 <h5>Nombre: Inferno</h5>
                 <h5>Precio: $24.00</h5>
