Banner, boton uniformes en todas las paginas. Saqué los acentos no aceptados por los fonts

--- a/acerca-de.html
+++ b/acerca-de.html
@@ -54,11 +54,13 @@
         <i class="fas fa-angle-double-up"></i>
     </a>
 
-    <section class="recent-article text-center my-4">
-      <div class="banner text-center p-3">
-        <h2>Acerca de CinemaFusion Films</h2>
+    <section>
+      <div class="banner">
+        <h2>CINEMAFUSION FILMS</h2>
       </div>
-      
+    </section>
+
+    <section class="recent-article text-center my-4">
       <div class="text-container mt-4">
         <p>
           En CinemaFusion Films nos especializamos en la producción, distribución y venta de películas del género de horror que te helarán la sangre y te robarán el sueño. Desde nuestra fundación, nos hemos comprometido a ofrecer una experiencia cinematográfica única que desafíe los límites de lo convencional.
