--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             Te invitamos a un viaje hacia lo oscuro explorando nuestro sitio web
           </p>
 
-          <a href="acerca-de.html" class="btn btn-danger conocenos-btn">CONOCENOS</a>
+          <a href="acerca-de.html" class="btn btn-danger btn-rojo">CONOCENOS</a>
         </div>
       </div>
     </section>
