--- a/carrito.html
+++ b/carrito.html
@@ -55,8 +55,13 @@
       <i class="fas fa-angle-double-up"></i>
     </a>
 
+    <section>
+      <div class="banner">
+        <h2>CARRITO DE COMPRAS</h2>
+      </div>
+    </section>
+
     <section class="container mt-5">
-      <h2 class="text-center mb-4">Carrito de Compras</h2>
     <div class="row">
       <div class="col-md-7">
         <div class="card mb-4 contenedor">
@@ -66,20 +71,20 @@
             <img src="img/posters/terrifier.jpg" class="img-fluid col-md-4 mt-1" alt="Terrifier">
               <div class="card-body col-md-8">
                 <h5>Nombre: Terrifier</h5>
-                <h5>Precio: $20.00</h5>
+                <h5>Precio: $15.154</h5>
                 <div class="cards-button">
-                  <button class="btn btn-danger">Eliminar</button>
-                  <button class="btn btn-primary mt-2">Agregar a Favoritos</button>
+                  <button class="btn btn-danger btn-rojo">Eliminar</button>
+                  <button class="btn btn-primary">Agregar a Favoritos</button>
                 </div>
               </div>
               <hr>
             <img src="img/posters/inferno.jpg" class="img-fluid col-md-4 mt-1" alt="Inferno">
               <div class="card-body col-md-8">
                 <h5>Nombre: Inferno</h5>
-                <h5>Precio: $24.00</h5>
+                <h5>Precio: $6.555</h5>
                 <div class="cards-button">
-                  <button class="btn btn-danger">Eliminar</button>
-                  <button class="btn btn-primary mt-2">Agregar a Favoritos</button>
+                  <button class="btn btn-danger btn-rojo">Eliminar</button>
+                  <button class="btn btn-primary">Agregar a Favoritos</button>
                 </div>
               </div>
               <hr>  
@@ -92,10 +97,10 @@
           <h4 class="text-center"> Resumen del Pedido</h4>
           <hr>
           <div class="card-body">
-            <h5>Subtotal: $44.00</h5>
+            <h5>Subtotal: $21.709</h5>
             <h5>Impuesto Pais: 20%</h5>
-            <h5>Total: $52.80</h5>
-            <a href="pago.html" class="btn btn-primary w-100">Realizar Pago</a>
+            <h5>Total: $26.050</h5>
+            <a href="pago.html" class="btn btn-primary w-100 mt-3">Realizar Pago</a>
           </div>
         </div>
       </div>
