--- a/pago.html
+++ b/pago.html
@@ -61,10 +61,11 @@
             </div>
         </section>
 
-        <p class="mt-3">*Por el momento solo aceptamos debito</p>
         <section>
             <div class="main-registro">
                 <div class="registro">
+                    <p class="mt-3 mb-3">*Por el momento solo aceptamos debito</p>
+
                     <h3>Ingresa los datos de la Tarjeta</h3>
                     <label for="titular">Nombre del titular</label>
                     <input type="text" id="titular" name="titular" required>
@@ -81,11 +82,11 @@
                     <label for="dni">DNI del titular</label>
                     <input type="number" id="dni" name="dni" required>
 
-                    <button type="submit" class="btn btn-success conocenos-btn">Pagar</button>
+                    <button type="submit" class="btn btn-danger btn-rojo">Pagar</button>
                 </div>
 
                 <div class="imagen-registro">
-                    <img src="img/corridor.jpg" alt="corridor-ingreso">
+                    <img src="img/pago.jpg" alt="corridor-ingreso">
                 </div>
             </div>
         </section>
