correccion banner novedades

--- a/novedades.html
+++ b/novedades.html
@@ -52,15 +52,15 @@
 
   
     
-    <main class="container mt-4">
+    <main>
         <a href="#top">
           <i class="fas fa-angle-double-up"></i>
         </a>
-        <section>
+
           <div class="banner text-center p-3">
             <h2>NOVEDADES</h2>
           </div>
-    
+          <section  class="container mt-4">
           <div class="recent-article text-center my-4">
             <h3>ARTÍCULO MÁS RECIENTE</h3>
           </div>
